# demoqa10-e2e-tests

./: .env.android  .env.bstack  .env.config  .env.example  .env.ios  .env.local  .env.local_emulator  .env.local_real  .env.remote  .env.stage  .env.test  .gitignore  README.md  config.py  conftest.py  gitignore.txt  homework.py  project.py  pyproject.toml  requirements.txt  test_fill_practice_form.py  test_first.py  test_fixture.py  test_google_should_find_selene.py  test_homework.py
components/: left_panel.py
demoqa10_e2e_tests/: application.py  resource.py
demoqa10_e2e_tests/api/: cart.py
demoqa10_e2e_tests/data/: user.py  users.py
demoqa10_e2e_tests/logging/: logging.py
demoqa10_e2e_tests/models/: onbording.py
demoqa10_e2e_tests/pages/: cart_page.py  main_page.py  profile_page.py  profile_pages.py  registartion_page.py  registration_page.py  text_box_registration_page.py
demoqa10_e2e_tests/test_data/: users.py
demoqa10_e2e_tests/utils/: allure_attach.py  data.py  page_actions.py  resource.py  step_logging.py  support_methods.py  user_data_processing.py
examples/: download_files.py  path_in_python.py  work_with_csv.py  work_with_pdf.py  work_with_xls.py  work_with_xlsx.py  work_with_zip.py
models/: provider.py  user.py  user_class.py  user_over_head.py
resources/: calendare.xlsx  csv_test.csv  template.xls
resources_hw8/: people.csv
schemas/: reqres_schemas.py
tests/: conftest.py  simple.py  test_111.py  test_fill_practice_form.py  test_fill_practice_form_page_object.py  test_fill_tex_box.py  test_fixtures.py  test_github.py  test_homework.py  test_list_users_get.py  test_parametrize.py  test_simple.py  test_simple_fail.py  test_simple_pass.py  test_simple_skip.py  test_skip.py  test_users_functions.py  test_users_objects.py  test_users_over_head_objects.py  test_users_simple.py  users.py
tests/Android_app/: conftest.py  test_wikipedia.py
tests/android_app/: conftest.py  script_wikipedia.py  test_online.py  test_wikipedia.py
tests/android_app_local/: conftest.py  test_wikipedia.py
tests/demoqa/: test_fill_practice_form.py  test_fill_practice_form_page_object.py  test_fill_tex_box.py
tests/demowebshop/: test_demowebshop.py  (+1 more)
tmp/: csv_test.csv
(+24 files in other folders)
